# SHARDS-cpp

./: .gitmodules  CMakeLists.txt  README.md  build.sh  genmrc.py
cmake/: Shards-config.cmake.in  ShardsConfig.cmake.in
ext/xxhash/: xxhash64.hpp
include/Shards/: Shards.h  ShardsFixedRate.h  ShardsFixedSize.h  SplayTree.h
include/shards/: fixed_rate_shards.hpp  fixed_size_shards.hpp  shards.hpp  splay_tree.h
src/: Shards.cpp  ShardsFixedRate.cpp  ShardsFixedSize.cpp  SplayTree.cpp  fixed_rate_shards.cpp  fixed_size_shards.cpp  splay_tree.cpp
test/: genmrc.py  main.cpp  mrc_inter.py
